# SudokuSolver

./: .gitignore  CMakeLists.txt  Makefile  Output.txt  SudokuSolver.sln  gtest.cpp  main.cpp  sudoku.cpp  sudoku.hpp  test.cpp  vectors.hpp
.github/workflows/: checker.yml
SudokuSolver/: Output.txt  SudokuSolver.cpp  SudokuSolver.hpp  SudokuSolver.vcxproj  SudokuSolver.vcxproj.filters  inputEasy.txt  inputHard.txt  main.cpp
expected_data/: crazy.txt  empty.txt  hard.txt  simple.txt
test_data/: crazy.txt  duplicates.txt  invalid_nums.txt
